# gps-tui

./: PANEL_IDEAS.md  README.md  pyproject.toml
docs/: adafruit-ultimate-gps-management.md
gps_tui/: __init__.py  app.py  device.py  geonames.py  gpsd.py  logger.py  model.py  pmtk.py  sim.py  theme.py  ui.py
scripts/: install-gps-logger-service.sh
systemd/: gps-tui-logger.service
tests/: test_core.py  test_device.py  test_geonames.py  test_logger.py  test_pmtk.py
themes/: btop-ish.toml
