[project]
name = "gps-tui"
version = "0.1.0"
description = "A btop-inspired GPS dashboard for gpsd."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Danne" }]
dependencies = ["pyserial>=3.5"]

[project.scripts]
gps-tui = "gps_tui.app:main"
gps-tui-device = "gps_tui.device:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
